# dyn_pod_struct

./: Cargo.toml  README.md
derive/: cargo.toml
derive/src/: lib.rs
dyn_struct_core/: Cargo.toml
dyn_struct_core/src/: lib.rs
dyn_struct_derive/: cargo.toml
dyn_struct_derive/src/: lib.rs
examples/: diff_display.rs
src/: base_type.rs  bevy_reflect.rs  bevy_reflect_for_tracked_dyn.rs  dyn_layout.rs  dyn_struct.rs  lib.rs  main.rs  spirv.rs  timeit.rs  tracked_dyn_struct.rs  update_bitmask.rs
tests/: hlsl.rs  mod.rs  wgsl.rs
