[package]
name = "dyn_pod_struct"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
hassle-rs = "0.11.0"
naga = { version = "23.0.0", features = ["wgsl-in", "spv-out"] }

[dependencies]
bytemuck = { version = "1.19.0", features = ["derive"] }
fxhash = "0.2.1"

dyn_pod_struct_derive = { path = "derive" } # Make optional?

spirq = "1.2.2"                                        # Make optional?
glam = { version = "0.27.0", features = ["bytemuck"] } # Make optional?
difference = "2.0"                                     # Make optional?
term = "0.5"                                           # Make optional?
bevy = "0.14"                                          # Make optional!

[profile.release-with-debug]
inherits = "release"
debug = true
